--- a/Bossfighter/Bossfighter.csproj
+++ b/Bossfighter/Bossfighter.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\defeat.png" />
     <None Remove="Images\eskill.png" />
     <None Remove="Images\ganyu.png" />
     <None Remove="Images\keqing2.png" />
@@ -16,9 +17,13 @@
     <None Remove="Images\sucrose.png" />
     <None Remove="Images\swordatk.png" />
     <None Remove="Images\ult.png" />
+    <None Remove="Images\victory.png" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Images\defeat.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\eskill.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -41,6 +46,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Images\ult.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\victory.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
